add option SO_64 in cmake to support for building 64bit target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 3.3)
 project(SoFixer)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Werror")
-# enable __SO64__ for 64bit so..
-#add_definitions("-D__SO64__")
+# =========================================================
+# SoFixer options
+# =========================================================
+set(SO_64 OFF CACHE BOOL "build SoFixer for 64bit target")
 
+if(SO_64)
+    message("building SoFixer for 64bit target")
+    add_definitions("-D__SO64__")
+else()
+    message("building SoFixer for 32bit target")
+    add_definitions("-D__SO32__")
+endif()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Werror")
 aux_source_directory(. ROOT_SRC)
 
-#if(SLibrary)
-#    add_library(SoFixer STATIC ${ROOT_SRC})
-#else()
 add_executable(SoFixer ${ROOT_SRC} )
-#endif()
-
