update github workflows to test build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ set(SO_64 OFF CACHE BOOL "build SoFixer for 64bit target")
 if(SO_64)
     message("building SoFixer for 64bit target")
     add_definitions("-D__SO64__")
+    set(TARGET_NAME SoFixer64)
 else()
     message("building SoFixer for 32bit target")
     add_definitions("-D__SO32__")
+    set(TARGET_NAME SoFixer32)
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Werror")
@@ -19,4 +21,4 @@ set(ROOT_SRC ElfReader.cpp
         ElfRebuilder.cpp
         ObElfReader.cpp)
 
-add_executable(SoFixer ${ROOT_SRC} main.cpp)
+add_executable(${TARGET_NAME} ${ROOT_SRC} main.cpp)
