--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
+        tag_name: ${{ runner.os }} ${{ github.ref }}
+        release_name: Release ${{ runner.os }} ${{ github.ref }}
+        draft: true
         prerelease: true
 
     - name: Upload build 32
@@ -66,7 +66,7 @@ jobs:
       with:
         upload_url: '${{ steps.create_release.outputs.upload_url }}'
         asset_path: '${{ github.workspace }}/build32/SoFixer32'
-        asset_name: 'SoFixer${{ matrix.os }}-32'
+        asset_name: 'SoFixer-${{ runner.os }}-32'
         asset_content_type: application/octet-stream
 
   - name: Upload build 64
@@ -76,5 +76,5 @@ jobs:
       with:
         upload_url: '${{ steps.create_release.outputs.upload_url }}'
         asset_path: '${{ github.workspace }}/build64/SoFixer64'
-        asset_name: 'SoFixer${{ matrix.os }}-64'
+        asset_name: 'SoFixer-${{ runner.os }}-64'
         asset_content_type: application/octet-stream
