--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ runner.os }} ${{ github.ref }}
-        release_name: Release ${{ runner.os }} ${{ github.ref }}
-        draft: false
+        tag_name: '${{ github.ref }}-${{ runner.os }}'
+        release_name: 'Release ${{ github.ref }}-${{ runner.os }}'
+        draft: true
         prerelease: false
 
     - name: Name Format
