--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         tag_name: '${{ github.ref }}'
         release_name: 'Release ${{ github.ref }}'
-        draft: true
+        draft: false
         prerelease: false
     outputs:
       UPLOAD_URL: ${{ steps.create_release.outputs.upload_url }}
